<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:scrollbars="none">


    <TextView
        android:id="@+id/textView"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@+id/edt_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_title"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/desc"
        app:layout_constraintStart_toStartOf="@+id/edt_desc"
        app:layout_constraintTop_toBottomOf="@+id/edt_title" />

    <EditText
        android:id="@+id/edt_desc"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cuisine"
        app:layout_constraintStart_toStartOf="@+id/edt_cuisine"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

    <EditText
        android:id="@+id/edt_cuisine"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView5"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prep_time"
        app:layout_constraintStart_toStartOf="@+id/edt_prep_time"
        app:layout_constraintTop_toBottomOf="@+id/edt_cuisine" />

    <TextView
        android:id="@+id/edt_prep_time"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/edt_cook_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:text="@string/cook_time"
        app:layout_constraintEnd_toEndOf="@+id/edt_cuisine"
        app:layout_constraintTop_toBottomOf="@+id/edt_cuisine" />

    <TextView
        android:id="@+id/edt_cook_time"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_serve_type"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView7"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:text="@string/servings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_prep_time" />


    <EditText
        android:id="@+id/edt_servings"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/edt_serve_type"
        app:layout_constraintEnd_toStartOf="@+id/edt_serve_type"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/edt_serve_type"
        style="@style/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/textView8"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tags"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/edt_servings" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/rect_stroke"
        android:padding="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_medium"
            android:nestedScrollingEnabled="false" />

        <LinearLayout
            android:id="@+id/lin_tag_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edt_tags"
            android:layout_alignBottom="@+id/edt_tags"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/padding_small">

            <ImageView
                android:id="@+id/image_tag_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rect_solid_b"
                android:src="@drawable/ic_add_small" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_tag"
            android:layout_toStartOf="@+id/lin_tag_add"
            android:inputType="text" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>